Don't hang when determining MIME type of corrupted files

The patch has been provided by Miroslav Ľos.

BUG: 280446