kdecore/services/kmimetyperepository.cpp
@@ -234,6 +234,14 @@ KMimeType::Ptr KMimeTypeRepository::findFromContent(QIODevice* device, int* accu
             *accuracy = 100;
         return findMimeTypeByName(QLatin1String("application/x-zerosize"));
     }
+    if (beginning.isEmpty()) {
+        // check if we can really read the data; also provide enough data for most rules
+        const qint64 dataNeeded = qMin(deviceSize, (qint64) 2048);
+        beginning.resize(dataNeeded);
+        if (!device->seek(0) || device->read(beginning.data(), dataNeeded) == -1) {
+            return defaultMimeTypePtr(); // don't bother detecting unreadable file
+        }
+    }
 
     m_mutex.lockForWrite();
     if (!m_magicFilesParsed) {
